# archi-agentic-toolset

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/memory/: constitution.md
deploy/: Dockerfile  README.md  docker-compose.yaml
deploy/aca/: README.md  main.bicep
deploy/components/: pubsub.yaml  secrets.yaml  statestore.yaml
deploy/scripts/: wait-for-neo4j.sh
output/data/: timeline.json
specs/001-architecture-scoring/: spec.md
specs/001-c4-architecture-scoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dapr-scoring-microservice/: plan.md  quickstart.md  research.md  tasks.md
specs/003-archimate-timeline-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-dapr-scoring-microservice/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/004-archimate-timeline-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-llm-dashboard-recommendations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-c4-scoring-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: .coverage  README.md
src/archi_c4_score/: __init__.py  api.py  archimate_scorer.py  archimate_xml_parser.py  c4_converter.py  cli.py  dapr_client.py  dashboard_service.py  exporter.py  github_importer.py  graph.py  hugo_export.py  importing.py  llm_service.py  mapper.py  models.py  parser.py  repository.py  scoring.py  storage.py  timeline.py  treemap.py
(+54 files in other folders)
