[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archi-c4-score"
version = "0.1.0"
description = "C4 Architecture Scoring with Neo4j"
readme = "src/README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.0.0",
    "fastapi>=0.100.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "dapr>=1.12.0",
    "google-genai>=0.8.0",
    "cachetools>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
archi-c4 = "archi_c4_score.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/archi_c4_score"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
